<resources>
    <string name="app_name">SCCoPilotApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="settings1">settings1</string>
    <string name="setting1toggle">setting1Toggle</string>
    <string name="black">Black</string>
    <string name="jsonFAILED">Failed to retrieve leaderboard scores, try again</string>
    <string name="white">White</string>
    <string name="settings_Title">Appearance</string>
    <string name="ship_color">Ship Color</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="player_1">Player 1</string>
    <string name="player_1score">player_1Score</string>
    <string name="player_2score">p2Leaderboard</string>
    <string name="player_2">p2_leaderboard_title</string>
    <string name="player_2score_">player_2Score</string>
    <string name="player_2_">Player 2</string>
    <string name="player_3score">player_3Score</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="player_4score">player_4Score</string>
    <string name="player_5">Player 5</string>
    <string name="player_5score">player_5Score</string>
    <string name="background">backgroundGIF</string>
    <string name="background_button_title">Background</string>
    <string name="whirl">Whirl</string>
    <string name="warp">Warp</string>
    <string name="toggleOFFTEST">Toggle is OFF</string>
    <string name="toggleButtonText">Change</string>
    <string name="jsonLoading">Loading leaderboard data…</string>
    <string name="helpbutton">HelpButton</string>
    <string name="MGA_no">Stay</string>
    <string name="MGA_yes">Leave</string>
    <string name="toast_text">Healed Ship 20 hit-points!</string>
    <string name="disconnecteddialog">
        You have been disconnected from the current game session. Please go back to the home screen
        and try again.
    </string>
    <string name="MA_tooltip">
        To begin, start up the desktop game to generate a game code.
        \n\nThen type in the code here and press play!
    </string>
    <string name="MGA_tooltip">
        If you have made it to this screen you are connected to the desktop game!
        \n\nPower up your player by tapping the ship. Every 10 taps heals you by 20 hit-points.
        Be careful not to get hit by enemies while healing!\n\nYou can also change the background via the
        settings menu and check global scores through the leaderboard page.
    </string>
    <string name="exit_confirmation">\n\nThis will end your current game session. You may join again with the same code
    \n\n</string>
    <string name="lessThan18">Code must be less than 18 characters!</string>
    <string name="emptyText">Code must not be empty!</string>
    <string name="stringWithNumber">Code must not contain any numbers!</string>
    <string name="stringWithSpaces">Code cannot contain spaces!</string>
    <string name="incorrectCode">Code Incorrect</string>
</resources>